@@ -479,9 +479,10 @@ drumkv1widget::drumkv1widget ( QWidget *pParent, Qt::WindowFlags wflags )
 		SIGNAL(triggered(bool)),
 		SLOT(helpAboutQt()));
 
-
 	// Epilog.
 	// QWidget::adjustSize();
+
+	m_ui.StatusBar->showMessage(tr("Ready"), 5000);
 }
 
 
@@ -528,8 +529,17 @@ void drumkv1widget::paramChanged ( float fValue )
 		return;
 
 	drumkv1widget_knob *pKnob = qobject_cast<drumkv1widget_knob *> (sender());
-	if (pKnob)
+	if (pKnob) {
 		updateParam(m_knobParams.value(pKnob), fValue);
+		QGroupBox *pGroupBox = qobject_cast<QGroupBox *> (pKnob->parentWidget());
+		if (pGroupBox) {
+			m_ui.StatusBar->showMessage(QString("%1 - %2 %3: %4")
+				.arg(m_ui.StackedWidget->currentWidget()->windowTitle())
+				.arg(pGroupBox->title())
+				.arg(pKnob->text())
+				.arg(pKnob->valueText()), 5000);
+		}
+	}
 
 	m_ui.Preset->dirtyPreset();
 }
@@ -550,6 +560,8 @@ void drumkv1widget::resetParams (void)
 		updateParam(index, fValue);
 		m_params_ab[index] = fValue;
 	}
+
+	m_ui.StatusBar->showMessage(tr("Reset"), 5000);
 }
 
 
@@ -602,6 +614,8 @@ void drumkv1widget::swapParams ( bool bOn )
 	}
 
 	m_ui.Preset->dirtyPreset();
+
+	m_ui.StatusBar->showMessage(tr("Swap %1").arg(bOn ? 'B' : 'A'), 5000);
 }
 
  
@@ -674,6 +688,8 @@ void drumkv1widget::newPreset (void)
 
 	refreshElements();
 	activateElement();
+
+	m_ui.StatusBar->showMessage(tr("New preset"), 5000);
 }
 
 
@@ -746,7 +762,9 @@ void drumkv1widget::loadPreset ( const QString& sFilename )
 
 	file.close();
 
-	m_ui.Preset->setPreset(fi.completeBaseName());
+	const QString& sPreset = fi.completeBaseName();
+	m_ui.Preset->setPreset(sPreset);
+	m_ui.StatusBar->showMessage(tr("Load preset: %1").arg(sPreset), 5000);
 
 	QDir::setCurrent(currentDir.absolutePath());
 
@@ -760,10 +778,11 @@ void drumkv1widget::savePreset ( const QString& sFilename )
 #ifdef CONFIG_DEBUG
 	qDebug("drumkv1widget::savePreset(\"%s\")", sFilename.toUtf8().constData());
 #endif
+	const QString& sPreset = QFileInfo(sFilename).completeBaseName();
 
 	QDomDocument doc(DRUMKV1_TITLE);
 	QDomElement ePreset = doc.createElement("preset");
-	ePreset.setAttribute("name", QFileInfo(sFilename).completeBaseName());
+	ePreset.setAttribute("name", sPreset);
 	ePreset.setAttribute("version", DRUMKV1_VERSION);
 
 	QDomElement eElements = doc.createElement("elements");
@@ -787,6 +806,8 @@ void drumkv1widget::savePreset ( const QString& sFilename )
 		QTextStream(&file) << doc.toString();
 		file.close();
 	}
+
+	m_ui.StatusBar->showMessage(tr("Save preset: %1").arg(sPreset), 5000);
 }
 
 
