@@ -1020,6 +1020,9 @@
      </widget>
     </widget>
    </item>
+   <item>
+    <widget class="QStatusBar" name="StatusBar" />
+   </item>
   </layout>
   <action name="helpAboutAction" >
    <property name="text" >
