@@ -5,7 +5,8 @@ ChangeLog
 
 SVN TRUNK
 
-- GUI layout moved from a toolbox into a stacked tab widget.
+- GUI layout moved from a toolbox into a stacked tab widget;
+  also, a status-bar has been added at the bottom display.
 - LV2 Atom/MIDI event processing is now official, a replacement
   for the formerly deprecated LV2 Event/MIDI specification.
 - Added dirty checking also on switching from unamed presets.
